--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ a{
 .wrapper{
     background-color: var(--primary--);
     color: white;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 
 
 }
@@ -93,11 +93,10 @@ header{
     background-color:var(--primary--) ;
     box-shadow: var(--shadow1--);
     top:0px;
-    position: sticky;
+    position: fixed;
     left: 0px;
     right: 0px;
     z-index: 1;
-    overflow-x: hidden;
   
     
    
@@ -632,4 +631,3 @@ padding-left: 20px;
      text-align:  center;
    }
     }
-
